--- a/BookMyRoom/Views/Shared/nav.cshtml
+++ b/BookMyRoom/Views/Shared/nav.cshtml
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="/">booK mY rooM</a>
+            <a class="brand" href="javascript:;" data-hash="">booK mY rooM</a>
             <div class="nav-collapse collapse" id="main-menu">
                 <ul class="nav" id="main-menu-left">
                     <li><a href="javascript:;" data-hash="rooms">roomS</a></li>
@@ -14,24 +14,24 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">schedulE <b class="caret"></b></a>
                         <ul class="dropdown-menu" id="swatch-menu">
-                            <li><a href="../default/">today'S schedulE</a></li>
+                            <li><a href="javascript:;" data-hash="today">today'S schedulE</a></li>
                             <li class="divider"></li>
-                            <li><a href="../default/">thiS week'S schedulE</a></li>
-                            <li><a href="../default/">thiS month'S schedulE</a></li>
+                            <li><a href="javascript:;" data-hash="week">thiS week'S schedulE</a></li>
+                            <li><a href="javascript:;" data-hash="month">thiS month'S schedulE</a></li>
                         </ul>
                     </li>
                     <li class="dropdown" id="preview-menu">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">bookinG <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="bootstrap.min.css">mY bookingS</a></li>
-                            <li><a href="bootstrap.css">makE neW bookinG</a></li>
+                            <li><a href="javascript:;" data-hash="own">mY bookingS</a></li>
+                            <li><a href="javascript:;" data-hash="calendar">makE neW bookinG</a></li>
                             <li class="divider"></li>
-                            <li><a href="variables.less">bookinG foR roomS</a></li>
+                            <li><a href="javascript:;" data-hash="roombooking">bookinG foR roomS</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="nav pull-right" id="main-menu-right">
-                    <li><a rel="tooltip" href="javascript:;" title="Welcome @User.Identity.Name, click here to see your booking history" >welcomE @User.Identity.Name<i class="icon-user"></i></a></li>
+                    <li><a rel="tooltip" href="javascript:;" data-hash="history" title="Welcome @User.Identity.Name, click here to see your booking history" >welcomE @User.Identity.Name<i class="icon-user"></i></a></li>
                     <li><a rel="tooltip" title="Logout" href="/logout">logouT<i class="icon-share-alt"></i></a></li>
                 </ul>
             </div>
