--- a/BookMyRoom/Views/Shared/CalendarView.cshtml
+++ b/BookMyRoom/Views/Shared/CalendarView.cshtml
@@ -6,7 +6,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             <h3 id="bookingModalLabel">Booking</h3>
         </div>
-        <form id="manageBooking" class="form-horizontal" action="/" method="post">
+        <form id="manageBooking" name="manageBooking" class="form-horizontal" action="/" method="post">
             <div class="modal-body">
                 <div class="span5">
                     <div class="control-group">
@@ -14,6 +14,16 @@
                         <div class="controls">
                             <input type="hidden" name="Id" id="Id" value="0" />
                             <input type="text" class="input-large" req="true" id="Title" valsection="main" name="Title" />
+                            <p class="help-block">Title of the Booking</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="span5">
+                    <div class="control-group">
+                        <label class="control-label" for="RoomId">Room</label>
+                        <div class="controls">
+                            <select req="true" id="RoomId" req="true" valsection="main" name="RoomId">
+                            </select>
                             <p class="help-block">Title of the Booking</p>
                         </div>
                     </div>
@@ -58,7 +68,12 @@
                                 <option value="Monthly">Monthly</option>
                                 <option value="Yearly">Yearly</option>
                             </select>
-                            <p class="help-block">Type of Recursion</p>
+                            <p class="help-block">
+                                Type of Recursion
+                                <a href="javascript:;" class="helpButton" data-toggle="popover" data-placement="top" data-content="Just enter start date and end date of the booking and select recursive type, we will setup proper recursion for you." title="" data-animation="true" data-title="Setup recursive Bookings">
+                                    <i class="icon-question-sign"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -67,7 +82,12 @@
                         <label class="control-label" for="Attendees">Attendees</label>
                         <div class="controls">
                             <textarea class="input-large" req="true" valsection="main" id="Attendees" name="Attendees"></textarea>
-                            <p class="help-block">Attendees of the booking</p>
+                            <p class="help-block">
+                                Attendees of the booking
+                                <a href="javascript:;" class="helpButton" data-toggle="popover" data-placement="top" data-content="We will send a meeting invitation for you." title="" data-animation="true" data-title="Enter valid email addresses">
+                                    <i class="icon-question-sign"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -82,9 +102,19 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-danger removeEvent hide">Delete Event</button>
                 <button class="btn" data-dismiss="modal">Close</button>
                 <button class="btn btn-primary" type="submit">Save changes</button>
             </div>
         </form>
     </div>
+</script>
+<script type="text/template" id="roomOptionsView">
+    <option>--Select Room--</option>
+    <%
+        if (typeof rooms != 'undefined') { 
+        rooms.forEach(function(room){
+    %>
+       <option value="<%= room.Id %>"><%= room.Name %></option>
+    <% });} %>
 </script>
